# mp-sequence-lab

./: .gitignore  README.md
lab0/: CMakeLists.txt  Dockerfile  README.md
lab0/include/: ArraySequence.h  ListSequence.h  Sequence.h
lab0/src/: main.cpp  sequence.cpp
lab0/tests/: test_sequence.cpp
lab1/: CMakeLists.txt  Dockerfile  README.md
lab1/include/: ArraySequence.h  BubbleSorter.h  ISorter.h  InsertionSorter.h  QuickSorter.h
lab1/src/: main.cpp
lab1/tests/: test_sort.cpp
lab2/: CMakeLists.txt  Dockerfile  README.md
lab2/include/: BinarySearch.h  BinaryTree.h  HashTable.h  Student.h
lab2/src/: main.cpp
lab2/tests/: test_search.cpp
lab3/: CMakeLists.txt  Dockerfile  README.md
lab3/include/: Examples.h
lab3/src/: example1_hello.cpp  example2_dotproduct_for.cpp  example3_dotproduct_subroutine.cpp  example4_dotproduct_sections.cpp  example5_matrix_vector.cpp  main.cpp
lab3/tests/: test_examples.cpp
lab4/: CMakeLists.txt  Dockerfile  README.md
lab4/analysis/: plot_results.py
lab4/include/: Jacobi.h
lab4/src/: jacobi.cpp  main.cpp
lab4/tests/: test_jacobi.cpp
lab5/: CMakeLists.txt  Dockerfile  README.md
lab5/analysis/: plot_results.py
lab5/include/: IntSet.h  MatMul.h  Matrix.h  SetRelations.h
lab5/src/: main.cpp  matmul.cpp  setrel.cpp
lab5/tests/: test_matmul.cpp  test_setrel.cpp
